--- a/index.html
+++ b/index.html
@@ -10,23 +10,26 @@
   <main>
     <h1>Hannah Erlebach</h1>
     <p>Incoming DPhil in Machine Learning @ Oxford</p>
+    <p>London · UK</p>
 
     <nav>
       <a href="#about">About</a>
       <a href="#research">Research</a>
       <a href="cv.pdf">CV</a>
-      <a href="mailto:hannah@example.com">Contact</a>
     </nav>
 
     <section id="about">
       <h2>About</h2>
-      <p>I’m a machine learning researcher starting a PhD at Oxford in 2025. My research interests include ...</p>
+      <p>I’m an MSc student in Machine Learning at UCL and will be starting a DPhil at Oxford supervised by Jakob Foerster in October 2025, with full funding from the Cooperative AI PhD Fellowship. My research focuses on the intersection of AI safety, multi-agent systems and open-endedness.<br>You can contact me at hannah [dot] erlebach [at] gmail [dot] com.
+    </p>
     </section>
 
     <section id="research">
       <h2>Research</h2>
+        <p>I'm currently working on open-ended techniques for automatically red-teaming LLMs. My previous research has focused on cooperation in language models and multi-agent reinforcement learning settings.</p>
       <ul>
-        <li><strong>Paper title</strong>, Conference 2024. [<a href="#">pdf</a>]</li>
+        <li><strong>RACCOON: Regret-based Adaptive Curricula for Cooperation</strong>, <strong>Hannah Erlebach and Jonathan Cook</strong>, <i>CoCoMARL workshop at Reinforcement Learning Conference 2024.</i> </li>
+        <li><strong>Welfare Diplomacy: Benchmarking Language Model Cooperation</strong>, Gabriel Mukobi, <strong>Hannah Erlebach</i>, Niklas Lauffer, Lewis Hammond, Alan Chan and Jesse Clifton. <i>SoLaR workshop at NeurIPS 2023.</i> [<a href="https://arxiv.org/abs/2310.08901">arXiv</a>]</li>
       </ul>
     </section>
   </main>
