--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <h2>Research</h2>
         <p>I'm currently working on open-ended techniques for automatically red-teaming LLMs. My previous research has focused on cooperation in language models and multi-agent reinforcement learning settings.</p>
       <ul>
-        <li><strong>RACCOON: Regret-based Adaptive Curricula for Cooperation</strong>, <strong>Hannah Erlebach and Jonathan Cook</strong>, <i>CoCoMARL workshop at Reinforcement Learning Conference 2024.</i> </li>
-        <li><strong>Welfare Diplomacy: Benchmarking Language Model Cooperation</strong>, Gabriel Mukobi, <strong>Hannah Erlebach</i>, Niklas Lauffer, Lewis Hammond, Alan Chan and Jesse Clifton. <i>SoLaR workshop at NeurIPS 2023.</i> [<a href="https://arxiv.org/abs/2310.08901">arXiv</a>]</li>
+        <li><strong>RACCOON: Regret-based Adaptive Curricula for Cooperation</strong>, <strong>Hannah Erlebach</strong> and Jonathan Cook, <i>CoCoMARL workshop at Reinforcement Learning Conference 2024.</i> </li>
+        <li><strong>Welfare Diplomacy: Benchmarking Language Model Cooperation</strong>, Gabriel Mukobi, <strong></strong>Hannah Erlebach</strong>, Niklas Lauffer, Lewis Hammond, Alan Chan and Jesse Clifton. <i>SoLaR workshop at NeurIPS 2023.</i> [<a href="https://arxiv.org/abs/2310.08901">arXiv</a>]</li>
       </ul>
     </section>
   </main>
