--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="about">
       <h2>About</h2>
-      <p>I’m an MSc student in Machine Learning at UCL and will be starting a DPhil at Oxford supervised by Jakob Foerster in October 2025, with full funding from the Cooperative AI PhD Fellowship. My research focuses on the intersection of AI safety, multi-agent systems and open-endedness.<br>You can contact me at hannah [dot] erlebach [at] gmail [dot] com.
+      <p>I’m an MSc student in Machine Learning at UCL and will be starting a DPhil at Oxford supervised by Jakob Foerster in October 2025, with full funding from the Cooperative AI PhD Fellowship. My research focuses on the intersection of <strong>AI safety</strong>, <strong>multi-agent systems</strong> and <strong>open-endedness</strong>.<br><br>You can contact me at hannah [dot] erlebach [at] gmail [dot] com.
     </p>
     </section>
 
@@ -28,8 +28,8 @@
       <h2>Research</h2>
         <p>I'm currently working on open-ended techniques for automatically red-teaming LLMs. My previous research has focused on cooperation in language models and multi-agent reinforcement learning settings.</p>
       <ul>
-        <li><strong>RACCOON: Regret-based Adaptive Curricula for Cooperation</strong>, <strong>Hannah Erlebach</strong> and Jonathan Cook, <i>CoCoMARL workshop at Reinforcement Learning Conference 2024.</i> </li>
-        <li><strong>Welfare Diplomacy: Benchmarking Language Model Cooperation</strong>, Gabriel Mukobi, <strong></strong>Hannah Erlebach</strong>, Niklas Lauffer, Lewis Hammond, Alan Chan and Jesse Clifton. <i>SoLaR workshop at NeurIPS 2023.</i> [<a href="https://arxiv.org/abs/2310.08901">arXiv</a>]</li>
+        <li><strong>RACCOON: Regret-based Adaptive Curricula for Cooperation</strong>. <strong>Hannah Erlebach</strong> and Jonathan Cook. Published in <i>CoCoMARL workshop at Reinforcement Learning Conference 2024.</i> </li>
+        <li><strong>Welfare Diplomacy: Benchmarking Language Model Cooperation</strong>. Gabriel Mukobi, <strong>Hannah Erlebach</strong>, Niklas Lauffer, Lewis Hammond, Alan Chan and Jesse Clifton. Published in <i>SoLaR workshop at NeurIPS 2023.</i> [<a href="https://arxiv.org/abs/2310.08901">arXiv</a>]</li>
       </ul>
     </section>
   </main>
