--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Hannah Erlebach</h1>
     <p>Incoming DPhil in Machine Learning @ Oxford</p>
     <p>London · UK</p>
-
+    <button id="theme-toggle" aria-label="Toggle dark mode">🌙</button>
     <nav>
       <a href="#about">About</a>
       <a href="#research">Research</a>
@@ -33,5 +33,21 @@
       </ul>
     </section>
   </main>
+  <script>
+    const toggle = document.getElementById('theme-toggle');
+    const body = document.body;
+  
+    // Load preference on page load
+    if (localStorage.getItem('theme') === 'dark') {
+      body.classList.add('dark-mode');
+      toggle.textContent = '🌙';
+    }
+  
+    toggle.addEventListener('click', () => {
+      const isDark = body.classList.toggle('dark-mode');
+      toggle.textContent = isDark ? '🌙' : '☀️';
+      localStorage.setItem('theme', isDark ? 'dark' : 'light');
+    });
+  </script>
 </body>
 </html>
