Revise personal details and research interests
Updated personal and research information in the HTML file.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <h1>Hannah Erlebach</h1>
-    <p>Incoming DPhil in Machine Learning @ Oxford</p>
+    <p>DPhil in Machine Learning @ FLAIR, University of Oxford</p>
     <p>London · UK</p>
     <nav>
       <a href="#about">About</a>
@@ -25,14 +25,20 @@
 
     <section id="about">
       <h2>About</h2>
-      <p>I’m an MSc student in Machine Learning at UCL and will be starting a DPhil at Oxford supervised by Jakob Foerster in October 2025, with full funding from the Cooperative AI PhD Fellowship. My research focuses on the intersection of <strong>AI safety</strong>, <strong>multi-agent systems</strong> and <strong>open-endedness</strong>.<br><br>You can contact me at hannah [dot] erlebach [at] gmail [dot] com.
+      <p>I’m a first year DPhil student in machine learning at the Univeristy of Oxford, supervised by Jakob Foerster. Previously, I completed an MSc in Machine Learning at University College London, and a BA in Mathematics at the University of Cambridge. I am funded by the Cooperative AI PhD fellowship.
+        <br><br>
+        I'm broadly interested in exploring questions about <i>minds</i>: what they are, where they come from, and how they <i>could</i> be.
+        <br><br>
+        You can contact me at hannah [dot] erlebach [at] gmail [dot] com.
     </p>
     </section>
 
     <section id="research">
       <h2>Research</h2>
-        <p>I'm currently working on open-ended techniques for automatically red-teaming LLMs. My previous research has focused on cooperation in language models and multi-agent reinforcement learning settings.</p>
+        <p>I'm currently thinking about <i>goals</i>: what they are and where they come from. My previous research has focused on cooperation in language models and multi-agent reinforcement learning settings.</p>
       <ul>
+        <li><strong>DUA: Discovering Universal Attacks Using Foundation Models</strong>. <i>Master's thesis for UCL MSc in Machine Learning, 2025</i>.</li>
+        <li><strong>Mitigating Goal Misgeneralisation via Minimax Regret</strong>. Karim Abdel Sadek, Matthew Farrugia-Roberts, Usman Anwar, <strong>Hannah Erlebach</strong>, Christian Schroeder de Witt, David Krueger and Michael Dennis. Published in <i>Reinforcement Learning Conference 2025.</i></li>
         <li><strong>RACCOON: Regret-based Adaptive Curricula for Cooperation</strong>. <strong>Hannah Erlebach</strong> and Jonathan Cook. Published in <i>CoCoMARL workshop at Reinforcement Learning Conference 2024.</i> </li>
         <li><strong>Welfare Diplomacy: Benchmarking Language Model Cooperation</strong>. Gabriel Mukobi, <strong>Hannah Erlebach</strong>, Niklas Lauffer, Lewis Hammond, Alan Chan and Jesse Clifton. Published in <i>SoLaR workshop at NeurIPS 2023.</i> [<a href="https://arxiv.org/abs/2310.08901">arXiv</a>]</li>
       </ul>
