Update personal interests and research description
Expanded on interests in AI alignment and the nature of goals.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h2>About</h2>
       <p>I’m a first year DPhil student in machine learning at the Univeristy of Oxford, supervised by Jakob Foerster. Previously, I completed an MSc in Machine Learning at University College London, and a BA in Mathematics at the University of Cambridge. I am funded by the Cooperative AI PhD fellowship.
         <br><br>
-        I'm broadly interested in exploring questions about <i>minds</i>: what they are, where they come from, and how they <i>could</i> be.
+        I'm broadly interested in exploring questions about <i>minds</i>: what they are, where they come from, and how they <i>could</i> be. I also care deeply about AI alignment and what it means for diverse minds to co-exist harmoniously.
         <br><br>
         You can contact me at hannah [dot] erlebach [at] gmail [dot] com.
     </p>
@@ -35,7 +35,7 @@
 
     <section id="research">
       <h2>Research</h2>
-        <p>I'm currently thinking about <i>goals</i>: what they are and where they come from. My previous research has focused on cooperation in language models and multi-agent reinforcement learning settings.</p>
+        <p>I'm currently thinking about <i>goals</i>: what they are and how they arise from a goal-less universe. Ultimately, I think that reward specification is an inescapable problem, and I'm curious about whether and how it's possible to induce interesting behaviour outside of the reward-maximisation paradigm.<br><br> My previous research has focused on cooperation in language models and multi-agent reinforcement learning settings.</p>
       <ul>
         <li><strong>DUA: Discovering Universal Attacks Using Foundation Models</strong>. <i>Master's thesis for UCL MSc in Machine Learning, 2025</i>.</li>
         <li><strong>Mitigating Goal Misgeneralisation via Minimax Regret</strong>. Karim Abdel Sadek, Matthew Farrugia-Roberts, Usman Anwar, <strong>Hannah Erlebach</strong>, Christian Schroeder de Witt, David Krueger and Michael Dennis. Published in <i>Reinforcement Learning Conference 2025.</i></li>
