Update location from London to Oxford

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <main>
     <h1>Hannah Erlebach</h1>
     <p>DPhil in Machine Learning @ FLAIR, University of Oxford</p>
-    <p>London · UK</p>
+    <p>Oxford · UK</p>
     <nav>
       <a href="#about">About</a>
       <a href="#research">Research</a>
