Update header to include profile image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
   <main>
-    <h1>Hannah Erlebach</h1>
+    <h1>
+      <img src="images/me.jpg" alt="Photo of Hannah Erlebach" class="profile-pic">
+      Hannah Erlebach
+    </h1>
     <p>DPhil in Machine Learning @ FLAIR, University of Oxford</p>
     <p>Oxford · UK</p>
     <nav>
