--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <h1>
-      <img src="images/me.jpg" alt="Photo of Hannah Erlebach" class="profile-pic">
+      <img src="images/me.jpg" alt="" class="profile-pic">
       Hannah Erlebach
     </h1>
     <p>DPhil in Machine Learning @ FLAIR, University of Oxford</p>
